[package]
name = "bevy_tdd_book_create_title_image"
version = "0.1.0"
edition = "2021"


[dependencies]
bevy = { version = "0.14.1" }
bevy_prototype_lyon = "0.12.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
